# gigaparsley-playground

./: .gitmodules  CHANGELOG.md  cabal.project  gigaparslet-pg.cabal
app/: Main.hs
lib/: Main.hs  Parser.hs
