cabal-version:      2.4
name:               gigaparley-pg
version:            0.1.0.0

author:             Oliver Madine
maintainer:         30090176+OliverMadine@users.noreply.github.com

extra-source-files: CHANGELOG.md

library lib
    build-depends:    base ^>=4.16.4.0, gigaparsec, QuickCheck
    default-language: Haskell2010
